[gd_scene load_steps=9 format=3 uid="uid://dcvt4yxmr6wnr"]

[ext_resource type="Script" path="res://script/system_control/control_black_screen.gd" id="1_7p2l8"]
[ext_resource type="Shader" path="res://shader/circle_transition.gdshader" id="2_isvx3"]
[ext_resource type="Script" path="res://nodes/worlds/score_text.gd" id="3_47blp"]
[ext_resource type="FontFile" uid="uid://crv230mibegw5" path="res://fonts/upceb.ttf" id="3_wigt8"]
[ext_resource type="Script" path="res://script/system_control/change_world_btn.gd" id="5_x54bt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a6s4s"]
shader = ExtResource("2_isvx3")
shader_parameter/circle_size = 0.0

[sub_resource type="Animation" id="Animation_c1syc"]
resource_name = "auto_circle_in"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [null],
"method": &"circle_out"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ua1t8"]
_data = {
"auto_circle_in": SubResource("Animation_c1syc")
}

[node name="Score" type="Node2D"]

[node name="score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("3_47blp")

[node name="score_text" type="VBoxContainer" parent="score"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/separation = 20
alignment = 1

[node name="current_score" type="HBoxContainer" parent="score/score_text"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="score/score_text/current_score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wigt8")
theme_override_font_sizes/font_size = 75
text = "Score: "

[node name="score" type="Label" parent="score/score_text/current_score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wigt8")
theme_override_font_sizes/font_size = 75
text = "0"

[node name="highest_score" type="HBoxContainer" parent="score/score_text"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="score/score_text/highest_score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wigt8")
theme_override_font_sizes/font_size = 75
text = "Highest Score: "

[node name="score" type="Label" parent="score/score_text/highest_score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wigt8")
theme_override_font_sizes/font_size = 75
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="score/score_text"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Button" type="Button" parent="score/score_text/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wigt8")
theme_override_font_sizes/font_size = 50
text = "Return to Main Menu"
script = ExtResource("5_x54bt")
world_target = "res://nodes/worlds/main_menu.tscn"

[node name="Button2" type="Button" parent="score/score_text/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wigt8")
theme_override_font_sizes/font_size = 50
text = "Next Chapter"

[node name="black_screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
script = ExtResource("1_7p2l8")

[node name="black_fade" type="ColorRect" parent="black_screen"]
material = SubResource("ShaderMaterial_a6s4s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="black_screen"]
libraries = {
"": SubResource("AnimationLibrary_ua1t8")
}
autoplay = "auto_circle_in"
